--- a/src/app/shared/components/popup-model/popup-model.component.html
+++ b/src/app/shared/components/popup-model/popup-model.component.html
@@ -1,1 +1,37 @@
-<p>popup-model works!</p>
+<div class="overlay-wrapper" *ngIf="!data.delete;else deleteDialog">
+    <div mat-dialog-title class="img-wrapper">
+        <img class="img-fluid" [src]="data.profileImg || 'http://localhost:3000/content/images/users/default.png'">
+    </div>
+    <div mat-dialog-content>
+        <div class="form-group">
+            <label>Name</label>
+            <input type="text" class="form-control" placeholder="name..." [(ngModel)]="data.name">
+        </div>
+        <div class="form-group">
+            <label>Job title</label>
+            <input type="text" class="form-control" placeholder="Job title..." [(ngModel)]="data.jobTitle">
+        </div>
+    </div>
+    <div mat-dialog-actions class="mb-2">
+        <div class="col-6">
+            <button class="btn btn-flat btn-block" (click)="onNoClick()">{{data.cancelBtn || 'cancel'}}</button>
+        </div>
+        <div class="col-6">
+            <button class="btn btn-primary  btn-block" [mat-dialog-close]="data.name" cdkFocusInitial>{{data.okBtn || 'ok'}}</button>
+        </div>
+    </div>
+</div>
+<ng-template #deleteDialog>
+    <div mat-dialog-content class="text-center mb-4">
+        <p>Are you sure you want to delete</p>
+        <span class="brand">{{data.name}}</span>
+    </div>
+    <div mat-dialog-actions class="mb-2">
+        <div class="col-6">
+            <button class="btn btn-flat btn-block" (click)="onNoClick()">{{data.cancelBtn || 'No'}}</button>
+        </div>
+        <div class="col-6">
+            <button class="btn btn-primary  btn-block" [mat-dialog-close]="data.name" cdkFocusInitial>{{data.okBtn || 'Yes'}}</button>
+        </div>
+    </div>
+</ng-template>
