--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,10 +4,7 @@
             <div class="col-md-9 mx-auto">
                 <div class="login-box">
                     <div class="row align-items-center no-gutters">
-                        <div class="col-md-6">
-                            <img class="img-fluid w-100" src="/assets/images/login.png" alt="Spaces login">
-                        </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 order-md-2">
                             <div class="content-wrapper">
                                 <h4 class="form-title mb-3"> Welcome back!</h4>
                                 <p>Please login to access <span class="brand">Spaces</span> dashboard</p>
@@ -39,6 +36,9 @@
                                     </div>
                                   </form>
                             </div>
+                        </div>
+                        <div class="col-md-6 order-md-1">
+                            <img class="img-fluid w-100" src="/assets/images/login.png" alt="Spaces login">
                         </div>
                     </div>
                 </div>
