--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -2,6 +2,7 @@
     border-radius: 15px;
     background-color: #fff;
     box-shadow: 1px 1px 10px #ccc;
+    overflow: hidden;
     .content-wrapper {
         padding: 15px;
         color: #777;
