--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -19,10 +19,10 @@
           <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact</a>
         </li>
         <li class="nav-item" *ngIf="!currentUser">
-          <a class="btn btn-primary"  [routerLink]="['/auth','login']"
+          <a class="btn btn-primary"  [routerLink]="['login']"
              routerLinkActive="active">login</a>
         </li>
-        <li class="nav-item" *ngIf="currentUser">
+        <li class="nav-item  mb-2 mb-md-0" *ngIf="currentUser">
           <a class="btn btn-primary" [routerLink]="['/users']"
              routerLinkActive="active">Enquire</a>
         </li>
