--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,35 +1,17 @@
 <app-crumb-heading [headingData]="headingData" (callBackAction)="addNewUser()"></app-crumb-heading>
-<section class="users-list" >
+<section class="users-list">
     <div class="container">
-        <div class="users-wrapper" appInfiniteScroller scrollPerecnt="70" immediateCallback="true"
-        [scrollCallback]="scrollCallback">
-            <div class="row align-items-stretch" *ngIf="usersList && usersList.length > 0">
-                <div class="" [ngClass]="{'col-md-8': selectedUser, 'col-12': !selectedUser}">
-                    <div class="head mb-3">
-                        <div class="row">
-                            <div class="col-md-9">
-                                User
-                            </div>
-                            <div class="col-md-3">
-                                Actions
-                            </div>
-                        </div>
-                    </div>
-                    <app-user-card class="card-wrapper" [active]="user.id === selectedUser?.id"
-                        *ngFor="let user of usersList"
-                        [userData]="user"
-                        (cardClicked)="selectUser($event)"
-                        (editClicked)="editUser($event)"
-                        (deleteClicked)="deleteUser($event)">
-                    </app-user-card>
-                </div>
-                <div class="col-md-4 bg-gray" *ngIf="selectedUser">
+        <div class="users-wrapper">
+            <div class="row align-items-stretch" *ngIf="usersList && usersList.length > 0;else noData">
+
+                <div class="col-md-3 bg-gray order-md-2" *ngIf="selectedUser">
                     <div class="details-card">
                         <a class="close-item" (click)="removeSelection()"><i class="fas fa-times"></i></a>
                         <div class="img-wrapper mb-4">
                             <img class="img-fluid" [src]="selectedUser.profileImg">
                         </div>
                         <h4>{{selectedUser.name}}</h4>
+                        <p>{{selectedUser.jobTitle}}</p>
 
                         <div class="btns-wrapper my-5">
                             <a class="btn btn-primary mr-4" (click)="editUser(selectedUser)">
@@ -44,9 +26,45 @@
                     </div>
 
                 </div>
+                <div class="order-md-1" [ngClass]="{'col-md-9': selectedUser, 'col-12': !selectedUser}">
+                    <div class="head mb-3">
+                        <div class="row">
+                            <div class="col-6" [ngClass]="{'col-md-10': !selectedUser, 'col-md-9': selectedUser}">
+                                User
+                            </div>
+                            <div class="col-6" [ngClass]="{'col-md-2': !selectedUser, 'col-md-3': selectedUser}">
+                                Actions
+                            </div>
+                        </div>
+                    </div>
+                    <app-user-card class="card-wrapper" *ngFor="let user of usersList"
+                        [cardData]="{active: user.id === selectedUser?.id, smallView: !!selectedUser, userData: user }"
+                        (cardClicked)="selectUser($event)" (editClicked)="editUser($event)"
+                        (deleteClicked)="deleteUser($event)">
+                    </app-user-card>
+                    <div class="text-center" *ngIf="!loading;else loadingTemp">
+                        <button class="btn btn-link" (click)="getUsers()" *ngIf="!latestUsers">Show more</button>
+                    </div>
+                    <ng-template #loadingTemp>
+                        <div class="text-center">
+                            <app-spinner></app-spinner>
+                        </div>
+                    </ng-template>
+                </div>
             </div>
+            <ng-template #noData>
+                <div class="empty">There are no data availble add some users</div>
+                <div class="text-center" *ngIf="!loading;else loadingTemp">
+                    <button class="btn btn-link" (click)="getUsers()" *ngIf="!latestUsers">Show more</button>
+                </div>
+                <ng-template #loadingTemp>
+                    <div class="text-center">
+                        <app-spinner></app-spinner>
+                    </div>
+                </ng-template>
+            </ng-template>
+
 
         </div>
     </div>
-
 </section>
